classDiagram

class ProgrammesListPageComponent {
  <<Livewire Anonymous Component>>
  +array sortBy
  +int perPage
  +bool isDrawerOpened
  +string? keywords
  +int|string|null institute_id
  +headers() array
  +institutes() array
  +programmes() LengthAwarePaginator
  +deleteProgramme(id) void
  +clear() void
  +with() array
}

class Programme {
  +int id
  +int institute_id
  +string programme_code
  +institute() BelongsTo
  +modules() BelongsToMany
  +programmeTranslation() HasMany
}

class Institute {
  +int id
  +instituteTranslation() HasMany
  +campuses() BelongsToMany
}

class Module {
  +int id
  +int institute_id
  +string module_code
  +institute() BelongsTo
  +programmes() BelongsToMany
  +moduleTranslation() HasMany
}

class ProgrammeTranslation {
  +int programme_id
  +string locale
  +string name
}

class InstituteTranslation {
  +int institute_id
  +string locale
  +string name
}

class ModuleTranslation {
  +int module_id
  +string locale
  +string name
}

class ProgrammeModule {
  +int programme_id
  +int module_id
}

ProgrammesListPageComponent ..> Programme : query/filter/sort/paginate
ProgrammesListPageComponent ..> Institute : filter options
ProgrammesListPageComponent ..> ProgrammeTranslation : search/sort by translated name

Programme "*" --> "1" Institute : belongsTo
Programme "*" -- "*" Module : belongsToMany via programme_modules
Programme "1" --> "*" ProgrammeTranslation : hasMany

Institute "1" --> "*" InstituteTranslation : hasMany
Module "1" --> "*" ModuleTranslation : hasMany
Module "*" --> "1" Institute : belongsTo

ProgrammeModule .. Programme : pivot
ProgrammeModule .. Module : pivot
